docs/paper-trades/v5/2026-05-06_report.md
# v5 Paper Trading Report -- 2026-05-06

## Summary

| Metric | Value |
|--------|-------|
| Engine | v5 multi-pool |
| Capital | Rs 10.00L |
| Regime | SIDEWAYS |
| **Net P&L** | **Rs 27,968 (+2.80%)** |
| Trades | 104 (L:71 S:33) |
| Win Rate | 72% |

## Trades

| # | Type | Pool | Stock | Entry | Exit | P&L | Reason |
|---|------|------|-------|-------|------|-----|--------|
| 1 | SHORT | INTRADAY | SBIN | 1059.90 | 1067.70 | Rs -234 | STOPLOSS |
| 2 | SHORT | INTRADAY | MUTHOOTFIN | 3446.40 | 3469.00 | Rs -181 | STOPLOSS |
| 3 | SHORT | INTRADAY | IDFCFIRSTB | 68.75 | 69.23 | Rs -184 | STOPLOSS |
| 4 | SHORT | INTRADAY | MPHASIS | 2209.80 | 2223.00 | Rs -132 | STOPLOSS |
| 5 | SHORT | INTRADAY | MARUTI | 13426.00 | 13520.00 | Rs -188 | STOPLOSS |
| 6 | SHORT | INTRADAY | SBIN | 1059.90 | 1066.50 | Rs -125 | STOPLOSS |
| 7 | SHORT | INTRADAY | JIOFIN | 248.45 | 250.67 | Rs -160 | STOPLOSS |
| 8 | SHORT | INTRADAY | ENRIN | 3297.40 | 3157.30 | Rs +560 | TARGET |
| 9 | SHORT | INTRADAY | PNB | 107.89 | 108.50 | Rs -115 | STOPLOSS |
| 10 | SHORT | INTRADAY | TECHM | 1452.20 | 1463.00 | Rs -86 | STOPLOSS |
| 11 | SHORT | INTRADAY | ONGC | 289.95 | 283.55 | Rs +550 | TARGET |
| 12 | SHORT | INTRADAY | LENSKART | 506.70 | 501.75 | Rs +203 | STOPLOSS |
| 13 | SHORT | INTRADAY | TMCV | 406.55 | 409.05 | Rs -178 | STOPLOSS |
| 14 | SHORT | INTRADAY | PNB | 107.89 | 108.46 | Rs -136 | STOPLOSS |
| 15 | SHORT | INTRADAY | BANKBARODA | 263.40 | 265.10 | Rs -92 | STOPLOSS |
| 16 | SHORT | INTRADAY | JUBLFOOD | 465.35 | 464.20 | Rs +58 | FLAT_FORCE_EXIT |
| 17 | SHORT | INTRADAY | IDFCFIRSTB | 68.75 | 68.78 | Rs -9 | FLAT_FORCE_EXIT |
| 18 | SHORT | INTRADAY | AUBANK | 1007.10 | 1009.30 | Rs -31 | FLAT_FORCE_EXIT |
| 19 | SHORT | INTRADAY | DLF | 597.30 | 600.30 | Rs -90 | STOPLOSS |
| 20 | SHORT | INTRADAY | ICICIBANK | 1251.30 | 1258.00 | Rs -80 | STOPLOSS |
| 21 | SHORT | INTRADAY | HYUNDAI | 1822.50 | 1819.00 | Rs +42 | FLAT_FORCE_EXIT |
| 22 | SHORT | INTRADAY | COALINDIA | 472.60 | 473.75 | Rs -49 | FLAT_FORCE_EXIT |
| 23 | SHORT | INTRADAY | AXISBANK | 1259.70 | 1268.80 | Rs -164 | STOPLOSS |
| 24 | SHORT | INTRADAY | TECHM | 1452.20 | 1461.90 | Rs -116 | STOPLOSS |
| 25 | SHORT | INTRADAY | GMRAIRPORT | 96.97 | 97.17 | Rs -34 | FLAT_FORCE_EXIT |
| 26 | SHORT | INTRADAY | ADANIPORTS | 1725.00 | 1740.30 | Rs -275 | STOPLOSS |
| 27 | SHORT | INTRADAY | MARUTI | 13426.00 | 13463.00 | Rs -37 | FLAT_FORCE_EXIT |
| 28 | SHORT | INTRADAY | ONGC | 289.95 | 282.10 | Rs +730 | TARGET |
| 29 | SHORT | INTRADAY | VOLTAS | 1375.90 | 1384.20 | Rs -75 | STOPLOSS |
| 30 | SHORT | INTRADAY | MPHASIS | 2209.80 | 2223.50 | Rs -178 | STOPLOSS |
| 31 | SHORT | INTRADAY | TATACONSUM | 1153.50 | 1153.60 | Rs -2 | TIME_EXIT |
| 32 | SHORT | INTRADAY | COALINDIA | 472.60 | 470.75 | Rs +94 | TIME_EXIT |
| 33 | SHORT | INTRADAY | LENSKART | 506.70 | 503.00 | Rs +155 | TIME_EXIT |
| 34 | LONG | SWING | BAJFINANCE | 950.20 | 978.80 | Rs +429 | TARGET |
| 35 | LONG | SWING | SHRIRAMFIN | 960.45 | 984.65 | Rs +484 | TARGET |
| 36 | LONG | SWING | MARICO | 807.20 | 833.40 | Rs +393 | TARGET |
| 37 | LONG | SWING | ABCAPITAL | 360.85 | 372.35 | Rs +368 | TARGET |
| 38 | LONG | SWING | M&M | 3210.80 | 3289.30 | Rs +236 | TARGET |
| 39 | LONG | SWING | MFSL | 1606.70 | 1641.00 | Rs +240 | TARGET |
| 40 | LONG | SWING | TORNTPHARM | 4251.80 | 4322.00 | Rs +140 | TARGET |
| 41 | LONG | SWING | VMM | 125.29 | 124.03 | Rs -171 | STOPLOSS |
| 42 | LONG | SWING | YESBANK | 20.48 | 21.25 | Rs +553 | TARGET |
| 43 | LONG | SWING | IDEA | 10.80 | 11.14 | Rs +412 | TARGET |
| 44 | LONG | SWING | BAJAJHLDNG | 10469.00 | 10755.00 | Rs +286 | TARGET |
| 45 | LONG | SWING | TATAELXSI | 4219.40 | 4303.00 | Rs +167 | TARGET |
| 46 | LONG | SWING | AUROPHARMA | 1428.10 | 1458.80 | Rs +276 | TARGET |
| 47 | LONG | SWING | DABUR | 460.55 | 460.70 | Rs +3 | SIGNAL_FLIP |
| 48 | LONG | SWING | BIOCON | 368.25 | 381.05 | Rs +627 | TARGET |
| 49 | LONG | SWING | AUROPHARMA | 1428.10 | 1465.30 | Rs +409 | TARGET |
| 50 | LONG | SWING | YESBANK | 20.48 | 21.30 | Rs +582 | TARGET |
| 51 | LONG | SWING | ALKEM | 5403.00 | 5541.50 | Rs +138 | TARGET |
| 52 | LONG | SWING | ZYDUSLIFE | 912.25 | 930.95 | Rs +224 | TARGET |
| 53 | LONG | SWING | BHARATFORG | 1866.60 | 1880.40 | Rs +69 | STOPLOSS |
| 54 | LONG | SWING | YESBANK | 20.48 | 21.67 | Rs +932 | TARGET |
| 55 | LONG | SWING | AUROPHARMA | 1428.10 | 1473.10 | Rs +450 | TARGET |
| 56 | LONG | SWING | BIOCON | 368.25 | 380.70 | Rs +423 | TARGET |
| 57 | LONG | SWING | GROWW | 220.05 | 216.44 | Rs -166 | STOPLOSS |
| 58 | LONG | SWING | BIOCON | 368.25 | 383.15 | Rs +730 | TARGET |
| 59 | LONG | SWING | AUROPHARMA | 1428.10 | 1474.90 | Rs +515 | TARGET |
| 60 | LONG | SWING | AUROPHARMA | 1428.10 | 1477.50 | Rs +148 | TARGET |
| 61 | LONG | SWING | WAAREEENER | 3181.70 | 3204.10 | Rs +90 | STOPLOSS |
| 62 | LONG | SWING | KEI | 5058.30 | 5191.50 | Rs +266 | STOPLOSS |
| 63 | LONG | SWING | RELIANCE | 1463.10 | 1439.10 | Rs -216 | STOPLOSS |
| 64 | LONG | SWING | BDL | 1398.60 | 1400.00 | Rs +8 | SIGNAL_FLIP |
| 65 | LONG | SWING | AUROPHARMA | 1428.10 | 1476.90 | Rs +781 | TARGET |
| 66 | LONG | SWING | YESBANK | 20.48 | 21.59 | Rs +1,132 | TARGET |
| 67 | LONG | SWING | BIOCON | 368.25 | 380.60 | Rs +494 | TARGET |
| 68 | LONG | SWING | AUROPHARMA | 1428.10 | 1476.00 | Rs +623 | TARGET |
| 69 | LONG | SWING | YESBANK | 20.48 | 21.71 | Rs +1,005 | TARGET |
| 70 | LONG | SWING | ICICIGI | 1776.90 | 1820.70 | Rs +350 | TARGET |
| 71 | LONG | SWING | IDEA | 10.80 | 11.28 | Rs +596 | TARGET |
| 72 | LONG | SWING | HDFCLIFE | 594.10 | 608.60 | Rs +290 | TARGET |
| 73 | LONG | SWING | BIOCON | 368.25 | 381.00 | Rs +357 | TARGET |
| 74 | LONG | SWING | M&MFIN | 305.55 | 321.10 | Rs +482 | TARGET |
| 75 | LONG | SWING | ALKEM | 5403.00 | 5612.00 | Rs +209 | TARGET |
| 76 | LONG | SWING | ZYDUSLIFE | 912.25 | 932.20 | Rs +160 | TARGET |
| 77 | LONG | SWING | MANKIND | 2319.50 | 2366.70 | Rs +378 | TARGET |
| 78 | LONG | SWING | YESBANK | 20.48 | 21.78 | Rs +1,347 | TARGET |
| 79 | LONG | SWING | IDEA | 10.80 | 11.35 | Rs +964 | TARGET |
| 80 | LONG | SWING | AUROPHARMA | 1428.10 | 1474.90 | Rs +515 | TARGET |
| 81 | LONG | SWING | BIOCON | 368.25 | 381.60 | Rs +547 | TARGET |
| 82 | LONG | SWING | ICICIGI | 1776.90 | 1816.10 | Rs +274 | TARGET |
| 83 | LONG | SWING | DABUR | 460.55 | 464.65 | Rs +94 | STOPLOSS |
| 84 | LONG | SWING | YESBANK | 20.48 | 21.78 | Rs +322 | TARGET |
| 85 | LONG | SWING | IDEA | 10.80 | 11.32 | Rs +238 | TARGET |
| 86 | LONG | SWING | AUROPHARMA | 1428.10 | 1478.60 | Rs +152 | TARGET |
| 87 | LONG | SWING | BIOCON | 368.25 | 380.45 | Rs +146 | TARGET |
| 88 | LONG | SWING | HINDZINC | 611.25 | 637.80 | Rs +186 | TARGET |
| 89 | LONG | SWING | GODFRYPHLP | 2238.70 | 2310.10 | Rs +71 | TARGET |
| 90 | LONG | SWING | ADANIGREEN | 1331.40 | 1360.50 | Rs +349 | TARGET |
| 91 | LONG | SWING | HDFCLIFE | 594.10 | 606.45 | Rs +86 | TARGET |
| 92 | LONG | SWING | CGPOWER | 826.90 | 824.80 | Rs -42 | STOPLOSS |
| 93 | LONG | SWING | YESBANK | 20.48 | 22.03 | Rs +1,790 | TARGET |
| 94 | LONG | SWING | IDEA | 10.80 | 11.39 | Rs +1,035 | TARGET |
| 95 | LONG | SWING | AUROPHARMA | 1428.10 | 1485.30 | Rs +629 | TARGET |
| 96 | LONG | SWING | BIOCON | 368.25 | 381.50 | Rs +477 | TARGET |
| 97 | LONG | SWING | HDFCLIFE | 594.10 | 607.25 | Rs +237 | TARGET |
| 98 | LONG | SWING | M&MFIN | 305.55 | 325.85 | Rs +650 | TARGET |
| 99 | LONG | SWING | POLYCAB | 8344.50 | 8413.00 | Rs +68 | STOPLOSS |
| 100 | LONG | SWING | ICICIGI | 1776.90 | 1814.90 | Rs +76 | TARGET |
| 101 | LONG | SWING | ICICIGI | 1776.90 | 1814.90 | Rs +228 | TARGET |
| 102 | LONG | SWING | AUROPHARMA | 1428.10 | 1483.30 | Rs +607 | TARGET |
| 103 | LONG | SWING | ABCAPITAL | 360.85 | 369.10 | Rs +338 | TARGET |
| 104 | LONG | SWING | COFORGE | 1168.80 | 1281.10 | Rs +1,235 | TARGET |