docs/paper-trades/v6/2026-05-06_report.md
# v5 Paper Trading Report -- 2026-05-06

## Summary

| Metric | Value |
|--------|-------|
| Engine | v5 multi-pool |
| Capital | Rs 10.00L |
| Regime | SIDEWAYS |
| **Net P&L** | **Rs 26,258 (+2.63%)** |
| Trades | 104 (L:67 S:37) |
| Win Rate | 73% |

## Trades

| # | Type | Pool | Stock | Entry | Exit | P&L | Reason |
|---|------|------|-------|-------|------|-----|--------|
| 1 | SHORT | INTRADAY | ONGC | 289.95 | 285.65 | Rs +224 | TARGET |
| 2 | SHORT | INTRADAY | ENRIN | 3297.40 | 3157.30 | Rs +420 | TARGET |
| 3 | SHORT | INTRADAY | ONGC | 289.95 | 285.55 | Rs +132 | TARGET |
| 4 | SHORT | INTRADAY | ENRIN | 3297.40 | 3197.00 | Rs +201 | TARGET |
| 5 | SHORT | INTRADAY | ONGC | 289.95 | 285.00 | Rs +139 | TARGET |
| 6 | SHORT | INTRADAY | LENSKART | 506.70 | 496.95 | Rs +400 | TARGET |
| 7 | SHORT | INTRADAY | ENRIN | 3297.40 | 3167.10 | Rs +1,173 | TARGET |
| 8 | SHORT | INTRADAY | IDFCFIRSTB | 68.75 | 68.78 | Rs -11 | FLAT_FORCE_EXIT |
| 9 | SHORT | INTRADAY | JUBLFOOD | 465.35 | 464.20 | Rs +58 | FLAT_FORCE_EXIT |
| 10 | SHORT | INTRADAY | MPHASIS | 2209.80 | 2210.00 | Rs -1 | FLAT_FORCE_EXIT |
| 11 | SHORT | INTRADAY | AUBANK | 1007.10 | 1009.30 | Rs -24 | FLAT_FORCE_EXIT |
| 12 | SHORT | INTRADAY | GMRAIRPORT | 96.97 | 97.17 | Rs -15 | FLAT_FORCE_EXIT |
| 13 | SHORT | INTRADAY | HYUNDAI | 1822.50 | 1819.00 | Rs +42 | FLAT_FORCE_EXIT |
| 14 | SHORT | INTRADAY | COALINDIA | 472.60 | 473.75 | Rs -51 | FLAT_FORCE_EXIT |
| 15 | SHORT | INTRADAY | ONGC | 289.95 | 283.55 | Rs +480 | TARGET |
| 16 | SHORT | INTRADAY | DIXON | 11253.00 | 11251.00 | Rs +2 | FLAT_FORCE_EXIT |
| 17 | SHORT | INTRADAY | MARUTI | 13426.00 | 13463.00 | Rs -37 | FLAT_FORCE_EXIT |
| 18 | SHORT | INTRADAY | TATACONSUM | 1153.50 | 1152.50 | Rs +6 | STOPLOSS |
| 19 | SHORT | INTRADAY | SBIN | 1059.90 | 1086.40 | Rs -795 | STOPLOSS |
| 20 | SHORT | INTRADAY | AXISBANK | 1259.70 | 1293.20 | Rs -469 | STOPLOSS |
| 21 | SHORT | INTRADAY | JIOFIN | 248.45 | 252.49 | Rs -222 | STOPLOSS |
| 22 | SHORT | INTRADAY | BANKBARODA | 263.40 | 270.25 | Rs -253 | STOPLOSS |
| 23 | SHORT | INTRADAY | DLF | 597.30 | 607.35 | Rs -100 | STOPLOSS |
| 24 | SHORT | INTRADAY | ICICIBANK | 1251.30 | 1275.00 | Rs -95 | STOPLOSS |
| 25 | SHORT | INTRADAY | PNB | 107.89 | 110.30 | Rs -161 | STOPLOSS |
| 26 | SHORT | INTRADAY | TMCV | 406.55 | 423.80 | Rs -1,104 | STOPLOSS |
| 27 | SHORT | INTRADAY | MUTHOOTFIN | 3446.40 | 3528.80 | Rs -659 | STOPLOSS |
| 28 | SHORT | INTRADAY | VOLTAS | 1375.90 | 1378.80 | Rs -20 | TIME_EXIT |
| 29 | SHORT | INTRADAY | TECHM | 1452.20 | 1468.10 | Rs -48 | TIME_EXIT |
| 30 | SHORT | INTRADAY | ADANIPORTS | 1725.00 | 1747.90 | Rs -366 | TIME_EXIT |
| 31 | SHORT | INTRADAY | LENSKART | 506.70 | 503.00 | Rs +133 | TIME_EXIT |
| 32 | SHORT | INTRADAY | MARUTI | 13426.00 | 13697.00 | Rs -271 | TIME_EXIT |
| 33 | SHORT | INTRADAY | HYUNDAI | 1822.50 | 1835.50 | Rs -156 | TIME_EXIT |
| 34 | SHORT | INTRADAY | IDFCFIRSTB | 68.75 | 69.61 | Rs -257 | TIME_EXIT |
| 35 | SHORT | INTRADAY | DIXON | 11253.00 | 11297.00 | Rs -44 | TIME_EXIT |
| 36 | SHORT | INTRADAY | COALINDIA | 472.60 | 470.50 | Rs +76 | TIME_EXIT |
| 37 | SHORT | INTRADAY | LENSKART | 506.70 | 503.00 | Rs +33 | TIME_EXIT |
| 38 | LONG | SWING | GRASIM | 2856.00 | 2902.90 | Rs +141 | TARGET |
| 39 | LONG | SWING | BAJFINANCE | 950.20 | 978.80 | Rs +286 | TARGET |
| 40 | LONG | SWING | SHRIRAMFIN | 960.45 | 984.65 | Rs +387 | TARGET |
| 41 | LONG | SWING | MARICO | 807.20 | 833.25 | Rs +521 | TARGET |
| 42 | LONG | SWING | ABCAPITAL | 360.85 | 372.25 | Rs +456 | TARGET |
| 43 | LONG | SWING | M&M | 3210.80 | 3289.30 | Rs +314 | TARGET |
| 44 | LONG | SWING | IDEA | 10.80 | 11.05 | Rs +216 | TARGET |
| 45 | LONG | SWING | 360ONE | 1066.50 | 1088.00 | Rs +172 | STOPLOSS |
| 46 | LONG | SWING | MFSL | 1606.70 | 1641.30 | Rs +173 | TARGET |
| 47 | LONG | SWING | VMM | 125.29 | 124.03 | Rs -132 | STOPLOSS |
| 48 | LONG | SWING | YESBANK | 20.48 | 21.25 | Rs +598 | TARGET |
| 49 | LONG | SWING | IDEA | 10.80 | 11.14 | Rs +446 | TARGET |
| 50 | LONG | SWING | BAJAJHLDNG | 10469.00 | 10755.00 | Rs +286 | TARGET |
| 51 | LONG | SWING | TATAELXSI | 4219.40 | 4304.20 | Rs +170 | TARGET |
| 52 | LONG | SWING | GODFRYPHLP | 2238.70 | 2292.60 | Rs +216 | TARGET |
| 53 | LONG | SWING | GODREJCP | 1101.50 | 1101.00 | Rs -4 | STOPLOSS |
| 54 | LONG | SWING | AUROPHARMA | 1428.10 | 1458.80 | Rs +368 | TARGET |
| 55 | LONG | SWING | DABUR | 460.55 | 460.60 | Rs +1 | SIGNAL_FLIP |
| 56 | LONG | SWING | BIOCON | 368.25 | 381.05 | Rs +717 | TARGET |
| 57 | LONG | SWING | AUROPHARMA | 1428.10 | 1464.70 | Rs +439 | TARGET |
| 58 | LONG | SWING | YESBANK | 20.48 | 21.30 | Rs +664 | TARGET |
| 59 | LONG | SWING | BAJAJHLDNG | 10469.00 | 10743.00 | Rs +274 | TARGET |
| 60 | LONG | SWING | ALKEM | 5403.00 | 5541.50 | Rs +277 | TARGET |
| 61 | LONG | SWING | TATAELXSI | 4219.40 | 4306.60 | Rs +174 | TARGET |
| 62 | LONG | SWING | ZYDUSLIFE | 912.25 | 930.95 | Rs +262 | TARGET |
| 63 | LONG | SWING | ADANIGREEN | 1331.40 | 1325.60 | Rs -75 | SIGNAL_FLIP |
| 64 | LONG | SWING | BDL | 1398.60 | 1406.60 | Rs +56 | SIGNAL_FLIP |
| 65 | LONG | SWING | BHARATFORG | 1866.60 | 1880.40 | Rs +69 | STOPLOSS |
| 66 | LONG | SWING | YESBANK | 20.48 | 21.67 | Rs +1,253 | TARGET |
| 67 | LONG | SWING | AUROPHARMA | 1428.10 | 1473.10 | Rs +585 | TARGET |
| 68 | LONG | SWING | BIOCON | 368.25 | 380.70 | Rs +573 | TARGET |
| 69 | LONG | SWING | IDEA | 10.80 | 11.27 | Rs +667 | TARGET |
| 70 | LONG | SWING | GROWW | 220.05 | 216.44 | Rs -126 | STOPLOSS |
| 71 | LONG | SWING | BIOCON | 368.25 | 383.15 | Rs +954 | TARGET |
| 72 | LONG | SWING | AUROPHARMA | 1428.10 | 1474.90 | Rs +655 | TARGET |
| 73 | LONG | SWING | YESBANK | 20.48 | 21.58 | Rs +1,021 | TARGET |
| 74 | LONG | SWING | WAAREEENER | 3181.70 | 3204.10 | Rs +90 | STOPLOSS |
| 75 | LONG | SWING | RELIANCE | 1463.10 | 1439.90 | Rs -162 | STOPLOSS |
| 76 | LONG | SWING | AUROPHARMA | 1428.10 | 1476.00 | Rs +814 | TARGET |
| 77 | LONG | SWING | YESBANK | 20.48 | 21.71 | Rs +1,346 | TARGET |
| 78 | LONG | SWING | ICICIGI | 1776.90 | 1819.90 | Rs +473 | TARGET |
| 79 | LONG | SWING | IDEA | 10.80 | 11.28 | Rs +795 | TARGET |
| 80 | LONG | SWING | HDFCLIFE | 594.10 | 608.50 | Rs +346 | TARGET |
| 81 | LONG | SWING | BIOCON | 368.25 | 381.00 | Rs +446 | TARGET |
| 82 | LONG | SWING | M&MFIN | 305.55 | 321.10 | Rs +575 | TARGET |
| 83 | LONG | SWING | ALKEM | 5403.00 | 5612.00 | Rs +209 | TARGET |
| 84 | LONG | SWING | ZYDUSLIFE | 912.25 | 932.20 | Rs +200 | TARGET |
| 85 | LONG | SWING | HINDZINC | 611.25 | 630.60 | Rs +252 | TARGET |
| 86 | LONG | SWING | TORNTPHARM | 4275.10 | 4388.80 | Rs +114 | TARGET |
| 87 | LONG | SWING | YESBANK | 20.48 | 21.78 | Rs +1,481 | TARGET |
| 88 | LONG | SWING | IDEA | 10.80 | 11.35 | Rs +1,060 | TARGET |
| 89 | LONG | SWING | AUROPHARMA | 1428.10 | 1474.90 | Rs +608 | TARGET |
| 90 | LONG | SWING | BIOCON | 368.25 | 381.60 | Rs +601 | TARGET |
| 91 | LONG | SWING | ICICIGI | 1776.90 | 1816.10 | Rs +314 | TARGET |
| 92 | LONG | SWING | DABUR | 460.55 | 464.65 | Rs +102 | STOPLOSS |
| 93 | LONG | SWING | YESBANK | 20.48 | 21.78 | Rs +1,418 | TARGET |
| 94 | LONG | SWING | IDEA | 10.80 | 11.32 | Rs +960 | TARGET |
| 95 | LONG | SWING | AUROPHARMA | 1428.10 | 1478.60 | Rs +606 | TARGET |
| 96 | LONG | SWING | BIOCON | 368.25 | 380.45 | Rs +476 | TARGET |
| 97 | LONG | SWING | ADANIGREEN | 1331.40 | 1360.50 | Rs +320 | TARGET |
| 98 | LONG | SWING | HDFCLIFE | 594.10 | 606.45 | Rs +235 | TARGET |
| 99 | LONG | SWING | CGPOWER | 826.90 | 824.80 | Rs -34 | STOPLOSS |
| 100 | LONG | SWING | ICICIGI | 1776.90 | 1812.60 | Rs +250 | TARGET |
| 101 | LONG | SWING | YESBANK | 20.48 | 22.02 | Rs +430 | TARGET |
| 102 | LONG | SWING | POLYCAB | 8344.50 | 8417.00 | Rs +72 | STOPLOSS |
| 103 | LONG | SWING | IDEA | 10.80 | 11.32 | Rs +289 | TARGET |
| 104 | LONG | SWING | AUROPHARMA | 1428.10 | 1483.30 | Rs +166 | TARGET |